Add preliminary filter logic, add test stubs and clean up tests